--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@zxing/browser": "^0.1.1",
+    "@zxing/library": "^0.19.2",
+    "@zxing/ngx-scanner": "^3.8.1",
     "bulma": "^0.9.4",
     "bulma-list": "^1.2.0",
     "rxjs": "~7.8.0",
